# demo_rust-actix-web-crud-mongodb

./: Cargo.toml
src/: lib.rs  main.rs
src/entities/: post.rs
src/entities/errors/: db_errors.rs
src/presentation/controllers/posts/: post_controller.rs
src/presentation/controllers/posts/routes/: add_post.rs  delete_post.rs  get_post.rs  update_post.rs  update_route.rs
src/repository/: post_repository.rs
src/repository/methods/: delete_by_id.rs  find_by_id.rs  get_by_id.rs  insert.rs
src/repository/posts/methods/: add.rs  contains.rs  delete.rs  get.rs  update.rs
src/services/use_cases/: add_post.rs  add_post_use_case.rs  delete_post.rs  get_post.rs  update.rs
