[package]
name = "api"
version = "0.1.0"
edition = "2021"


[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.0"
actix-web = "4"
serde = "1"
serde_json = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.0"
tokio = { version = "1.0", features = ["full"] }